[package]
name = "fs-utils"
version = "1.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
repository = "https://github.com/Byron/fs-utils-rs"
description = "Utilities to help working with the filesytem"
documentation = "https://docs.rs/fs-utils"
keywords = ["utility", "filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
quick-error = "1.1"

[dev-dependencies]
tempdir = "^0.3"
tempfile = "^3.0"
