[package]
name = "fs-utils"
version = "1.1.5-alpha.0"
edition = "2018"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
repository = "https://github.com/Byron/fs-utils-rs"
description = "Utilities to help working with the filesytem"
documentation = "https://docs.rs/fs-utils"
keywords = ["utility", "filesystem"]
license = "MIT OR Apache-2.0"
readme = "README.md"
include = ["src/**/*", "LICENSE-*", "README.md", "changelog.md"]

[dependencies]
quick-error = "1.2"

[dev-dependencies]
tempfile = "^3.0"
